--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 var form = document.getElementById("csrf");
 
                 var header = document.getElementById("header").value;
-                console.log(header);
+                console.log("The header is: " + header);
                 //form.submit();
             })();
         </script>
