--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             (function () {
                 var form = document.getElementById("csrf");
 
-                var header = document.getElementById("header").value;
+                var header = document.getElementById("header");
                 console.log("The header is: " + header);
                 //form.submit();
             })();
