--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
         <script>
             (function () {
-                var header = document.getElementById("header").getElementsByTagName("a")[0];
-                var href = header.getAttribute("href");
-                var csrf = href.split("=")[1];
-                //console.log("The header is: " + csrfText);
                 
-                //var form = document.getElementById("csrf");
-                //addCsrfToForm(form, csrf);
-                //form.submit();
+                var csrf = '';
+                setTimeout(function(){
+                    var header = document.getElementById("header").getElementsByTagName("a")[0];
+                    var href = header.getAttribute("href");
+                    csrf = href.split("=")[1];      
+                }, 3);
+
                 createForm('fcab4e7dfbe01ce4e3904b97febe6a6a184302c3', csrf);
             })();
             
