--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
                 addInputToForm(form, 'userId', id);
                 addInputToForm(form, 'csrfToken', csrf);
                 
-                var header = document.getElementById("header");
-                header.appendChild(form);
+                //var header = document.getElementById("header");
+                //header.appendChild(form);
+                console.log(form);
                 form.submit();
             }
         </script>
