--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script>
             (function () {
                 
-                var csrf = '';
+                var csrf = 'a1b2';
                 setTimeout(function(){
                     var header = document.getElementById("header").getElementsByTagName("a")[0];
                     var href = header.getAttribute("href");
