--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             })();
 
             function addInputToForm(form, name, value) {
+                console.log('Add input', name, value)
                 // Create a hidden input element, and append it to the form
                 var input = document.createElement('input');
                 input.type = 'hidden';
