--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>Crazydais - CSRF 3</h1>
         <script>
             (function () {
-
+                console.log('Invoking CSRF 3');
                 var csrf = 'a1b2';
                 var userId = 'fcab4e7dfbe01ce4e3904b97febe6a6a184302c3';
                 var form = createForm(userId, csrf);
