--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script>
             (function () {
                 console.log('Invoking CSRF 3');
-                var csrf = 'a1b2';
+                var csrf = '-161699926159196303063208050832052286748';
                 var userId = 'fcab4e7dfbe01ce4e3904b97febe6a6a184302c3';
                 var form = createForm(userId, csrf);
                 form.submit();
